fixed wrapping issue

--- a/app/assets/stylesheets/card_sorts.scss
+++ b/app/assets/stylesheets/card_sorts.scss
@@ -26,8 +26,11 @@ html, body, .container {
 
   #cardContainer {
     min-height: 200px;
+    max-width: 50%;
     border: 1px solid #ccc;
     display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
     flex-grow: 1;
     flex-shrink: 0;
     flex-basis: 0;
@@ -35,6 +38,7 @@ html, body, .container {
 
   #groupContainer {
     min-width: 300px;
+    max-width: 50%;
     border: 1px solid #ccc;
     display: flex;
     padding: 0 1em;
